--- a/Home Page/AboutUsPage/index.html
+++ b/Home Page/AboutUsPage/index.html
@@ -6,42 +6,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Us - Phantom Global</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="../New folder/Favicon (2).png" type="image/png">
+
 </head>
 
 <body>
   <header>
-  <a href="../main.html" class="brand">
-    <img src="../New folder/logo2.png" alt="Phanthom Global Logo" class="brand-logo">
-    Hanthom Global
-  </a>
+    <a href="../main.html" class="brand">
+      <img src="../New folder/logo2.png" alt="Phanthom Global Logo" class="brand-logo">
+      Hanthom Global
+    </a>
 
-  <div class="menu-btn">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-
-  <div class="navigation">
-    <div class="navigation-items">
-      <a href="../main.html">Home</a>
-      <a href="../AboutUsPage/index.html">About Us</a>
-      <a href="../Destinations/index.html">Destinations</a>
-      <a href="../ContactUs/contactus1.html">Contact Us</a>
-      <a href="../Termsandcondition/terms.html">Plan Your Trip</a>
+    <div class="menu-btn">
+      <span></span>
+      <span></span>
+      <span></span>
     </div>
-  </div>
-</header>
-<link rel="stylesheet" href="../main.css">
-<script src="../main.js"></script>
+
+    <div class="navigation">
+      <div class="navigation-items">
+        <a href="../main.html">Home</a>
+        <a href="../AboutUsPage/index.html">About Us</a>
+        <a href="../Destinations/index.html">Destinations</a>
+        <a href="../ContactUs/contactus1.html">Contact Us</a>
+        <a href="../Termsandcondition/terms.html">Plan Your Trip</a>
+      </div>
+    </div>
+  </header>
+  <link rel="stylesheet" href="../main.css">
+  <script src="../main.js"></script>
 
 
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
+  <script src="https://elfsightcdn.com/platform.js" async></script>
+  <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
-  
+
   <div class="blog-posts-container"></div>
   <script src="main.js"></script>
   <script src="../main.js"></script>
+
+
 
 
 </body>
