--- a/Home Page/Destinations/Packages/ex/aussie5.html
+++ b/Home Page/Destinations/Packages/ex/aussie5.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Phanthom Global - Australia Explorer (5 Days / 4 Nights)</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Inter:wght@400;600&display=swap"
+    rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="stylesheet" href="../styles.css" />
+  <link rel="icon" href="../../../New folder/Favicon (2).png" type="image/png">
+
 </head>
+
 <body>
 
   <header>
@@ -34,106 +40,239 @@
     </div>
   </header>
 
-<link rel="stylesheet" href="../../../main.css">
-<script src="../../../main.js"></script>
+  <link rel="stylesheet" href="../../../main.css">
+  <script src="../../../main.js"></script>
 
 
 
-<section class="hero">
-  <div class="hero-media">
-    <img src="./photo-1523482580672-f109ba8cb9be.jpeg" alt="Australia Beach">
-    <div class="hero-overlay"></div>
-  </div>
-  <div class="hero-content container">
-    <span class="chip"><i class="ri-sparkling-2-line"></i> Featured Package</span>
-    <h1 class="title">AUSTRALIA — 5 Days / 4 Nights</h1>
-    <p class="subtitle">Explore Sydney, Blue Mountains, Great Ocean Road, and Melbourne for an unforgettable Australian journey.</p>
-
-    <div class="facts">
-      <div class="fact"><i class="ri-sun-foggy-line"></i><span>5 Days</span></div>
-      <div class="fact"><i class="ri-moon-clear-line"></i><span>4 Nights</span></div>
-      <div class="fact"><i class="ri-map-pin-2-line"></i><span>Sydney • Blue Mountains • Great Ocean Road • Melbourne</span></div>
-      <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Sep – Apr</span></div>
+  <section class="hero">
+    <div class="hero-media">
+      <img src="./photo-1523482580672-f109ba8cb9be.jpeg" alt="Australia Beach">
+      <div class="hero-overlay"></div>
     </div>
+    <div class="hero-content container">
+      <span class="chip"><i class="ri-sparkling-2-line"></i> Featured Package</span>
+      <h1 class="title">AUSTRALIA — 5 Days / 4 Nights</h1>
+      <p class="subtitle">Explore Sydney, Blue Mountains, Great Ocean Road, and Melbourne for an unforgettable
+        Australian journey.</p>
 
-    <div class="cta-wrap">
-      <button class="btn primary" id="enquireBtn"><i class="ri-send-plane-2-line"></i> Enquire Now</button>
-    </div>
-
-    <aside class="sticky-card">
-      <div class="price-row">
-        <div>
-          <small>From</small>
-          <h3 class="price">$1,099 <span>per person</span></h3>
-        </div>
-        <img class="badge" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6UL7Fd2IUIpgysgR7QrdFaZ8EWu9YVQqF7g&s" alt="badge">
+      <div class="facts">
+        <div class="fact"><i class="ri-sun-foggy-line"></i><span>5 Days</span></div>
+        <div class="fact"><i class="ri-moon-clear-line"></i><span>4 Nights</span></div>
+        <div class="fact"><i class="ri-map-pin-2-line"></i><span>Sydney • Blue Mountains • Great Ocean Road •
+            Melbourne</span></div>
+        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Sep – Apr</span></div>
       </div>
-      <ul class="mini-list">
-        <li><i class="ri-hotel-bed-line"></i> 3★ Hotels</li>
-        <li><i class="ri-restaurant-2-line"></i> Daily Breakfast</li>
-        <li><i class="ri-car-line"></i> Private Transport</li>
-        <li><i class="ri-time-line"></i> Flexible Start</li>
+
+      <div class="cta-wrap">
+        <button class="btn primary" id="enquireBtn"><i class="ri-send-plane-2-line"></i> Enquire Now</button>
+      </div>
+
+      <aside class="sticky-card">
+        <div class="price-row">
+          <div>
+            <small>From</small>
+            <h3 class="price">$1,099 <span>per person</span></h3>
+          </div>
+          <img class="badge"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR6UL7Fd2IUIpgysgR7QrdFaZ8EWu9YVQqF7g&s"
+            alt="badge">
+        </div>
+        <ul class="mini-list">
+          <li><i class="ri-hotel-bed-line"></i> 3★ Hotels</li>
+          <li><i class="ri-restaurant-2-line"></i> Daily Breakfast</li>
+          <li><i class="ri-car-line"></i> Private Transport</li>
+          <li><i class="ri-time-line"></i> Flexible Start</li>
+        </ul>
+        <button class="btn full" id="bookNow"><i class="ri-whatsapp-line"></i> Chat to Book</button>
+      </aside>
+    </div>
+  </section>
+
+  <section class="container section">
+    <h2 class="section-title">Highlights</h2>
+    <div class="highlights">
+      <article class="hl-card">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Sydney_Opera_House_and_Harbour_Bridge_Dusk_%282%29_2019-06-21.jpg/330px-Sydney_Opera_House_and_Harbour_Bridge_Dusk_%282%29_2019-06-21.jpg"
+          alt="Sydney Opera House">
+        <div class="hl-content">
+          <h3>Sydney</h3>
+          <p>Opera House, Harbour Bridge & Bondi Beach.</p>
+        </div>
+      </article>
+      <article class="hl-card">
+        <img src="https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?q=80&w=800&auto=format&fit=crop"
+          alt="Blue Mountains">
+        <div class="hl-content">
+          <h3>Blue Mountains</h3>
+          <p>Scenic World, Three Sisters & waterfalls.</p>
+        </div>
+      </article>
+      <article class="hl-card">
+        <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?q=80&w=800&auto=format&fit=crop"
+          alt="Great Ocean Road">
+        <div class="hl-content">
+          <h3>Great Ocean Road</h3>
+          <p>12 Apostles, coastal cliffs & surfing towns.</p>
+        </div>
+      </article>
+      <article class="hl-card">
+        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=800&auto=format&fit=crop"
+          alt="Melbourne">
+        <div class="hl-content">
+          <h3>Melbourne</h3>
+          <p>City culture, laneways & Federation Square.</p>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  <section class="container section">
+    <h2 class="section-title">Day-by-Day Itinerary</h2>
+    <div class="timeline">
+      <details class="day">
+        <summary>
+          <div class="day-head"><span class="dot"></span>
+            <h3>Day 1 — Arrive Sydney</h3>
+          </div>
+          <div class="meta"><span><i class="ri-flight-takeoff-line"></i> Arrival</span><span><i
+                class="ri-hotel-bed-line"></i> Sydney (2N)</span></div>
+        </summary>
+        <div class="day-body">
+          <ul class="checks">
+            <li><i class="ri-checkbox-circle-line"></i> Airport pickup & city orientation</li>
+            <li><i class="ri-checkbox-circle-line"></i> Evening walk at Darling Harbour</li>
+          </ul>
+        </div>
+      </details>
+
+      <details class="day">
+        <summary>
+          <div class="day-head"><span class="dot"></span>
+            <h3>Day 2 — Sydney City Tour</h3>
+          </div>
+          <div class="meta"><span><i class="ri-road-map-line"></i> Sightseeing</span><span><i
+                class="ri-hotel-bed-line"></i> Sydney (2N)</span></div>
+        </summary>
+        <div class="day-body">
+          <ul class="checks">
+            <li><i class="ri-checkbox-circle-line"></i> Visit Opera House & Harbour Bridge</li>
+            <li><i class="ri-checkbox-circle-line"></i> Relax at Bondi Beach</li>
+          </ul>
+        </div>
+      </details>
+
+      <details class="day">
+        <summary>
+          <div class="day-head"><span class="dot"></span>
+            <h3>Day 3 — Blue Mountains</h3>
+          </div>
+          <div class="meta"><span><i class="ri-road-map-line"></i> Excursion</span><span><i
+                class="ri-hotel-bed-line"></i> Sydney (1N)</span></div>
+        </summary>
+        <div class="day-body">
+          <ul class="checks">
+            <li><i class="ri-checkbox-circle-line"></i> Explore Three Sisters & Scenic World</li>
+            <li><i class="ri-checkbox-circle-line"></i> Visit Wentworth Falls</li>
+          </ul>
+        </div>
+      </details>
+
+      <details class="day">
+        <summary>
+          <div class="day-head"><span class="dot"></span>
+            <h3>Day 4 — Great Ocean Road</h3>
+          </div>
+          <div class="meta"><span><i class="ri-road-map-line"></i> Travel to Melbourne</span><span><i
+                class="ri-hotel-bed-line"></i> Melbourne (1N)</span></div>
+        </summary>
+        <div class="day-body">
+          <ul class="checks">
+            <li><i class="ri-checkbox-circle-line"></i> Drive along Great Ocean Road</li>
+            <li><i class="ri-checkbox-circle-line"></i> See 12 Apostles</li>
+          </ul>
+        </div>
+      </details>
+
+      <details class="day">
+        <summary>
+          <div class="day-head"><span class="dot"></span>
+            <h3>Day 5 — Melbourne City</h3>
+          </div>
+          <div class="meta"><span><i class="ri-road-map-line"></i> Sightseeing</span><span><i
+                class="ri-flight-takeoff-line"></i> Departure</span></div>
+        </summary>
+        <div class="day-body">
+          <ul class="checks">
+            <li><i class="ri-checkbox-circle-line"></i> Explore Federation Square & laneways</li>
+            <li><i class="ri-checkbox-circle-line"></i> Transfer to airport</li>
+          </ul>
+        </div>
+      </details>
+    </div>
+  </section>
+
+  <section class="container section">
+    <h2 class="section-title">Handpicked Hotels</h2>
+    <div class="hotel-slider" id="hotelSlider">
+      <article class="hotel"><img
+          src="https://images.unsplash.com/photo-1566073771259-6a8506099945?q=80&w=1200&auto=format&fit=crop"
+          alt="Sydney Hotel">
+        <div class="hotel-body">
+          <h3>Sydney Harbour Hotel</h3>
+          <div class="stars">★★★★☆</div>
+          <p>Close to Opera House & Darling Harbour.</p>
+          <div class="tags"><span><i class="ri-wifi-line"></i> Wi-Fi</span><span><i class="ri-restaurant-2-line"></i>
+              Breakfast</span></div>
+        </div>
+      </article>
+      <article class="hotel"><img
+          src="https://www.thehotelguru.com/_images/00/e3/00e3d0f6e4d7dd685074696828882121/600x422.jpg"
+          alt="Blue Mountains Hotel">
+        <div class="hotel-body">
+          <h3>Blue Mountains Retreat</h3>
+          <div class="stars">★★★☆☆</div>
+          <p>Nature-inspired stay with valley views.</p>
+          <div class="tags"><span><i class="ri-fire-line"></i> Heater</span></div>
+        </div>
+      </article>
+      <article class="hotel"><img
+          src="https://static.where-e.com/Australia/New_South_Wales/Blue_Mountains/Falls-Mountain-Retreat-Blue-Mountains_625f8374eaf07deb850764de9d759c03.jpg"
+          alt="Melbourne Hotel">
+        <div class="hotel-body">
+          <h3>Melbourne City Hotel</h3>
+          <div class="stars">★★★★☆</div>
+          <p>Located in the heart of Melbourne CBD.</p>
+          <div class="tags"><span><i class="ri-wifi-line"></i> Wi-Fi</span><span><i class="ri-restaurant-2-line"></i>
+              Breakfast</span></div>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  <section class="container section grid-2">
+    <div>
+      <h2 class="section-title">Included</h2>
+      <ul class="tick-list">
+        <li><i class="ri-check-line"></i> 4 nights accommodation</li>
+        <li><i class="ri-check-line"></i> Daily breakfast</li>
+        <li><i class="ri-check-line"></i> Private transfers</li>
       </ul>
-      <button class="btn full" id="bookNow"><i class="ri-whatsapp-line"></i> Chat to Book</button>
-    </aside>
-  </div>
-</section>
+    </div>
+    <div>
+      <h2 class="section-title">Excluded</h2>
+      <ul class="cross-list">
+        <li><i class="ri-close-line"></i> International flights</li>
+        <li><i class="ri-close-line"></i> Travel insurance</li>
+      </ul>
+    </div>
+  </section>
 
-<section class="container section">
-  <h2 class="section-title">Highlights</h2>
-  <div class="highlights">
-    <article class="hl-card">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Sydney_Opera_House_and_Harbour_Bridge_Dusk_%282%29_2019-06-21.jpg/330px-Sydney_Opera_House_and_Harbour_Bridge_Dusk_%282%29_2019-06-21.jpg" alt="Sydney Opera House">
-      <div class="hl-content"><h3>Sydney</h3><p>Opera House, Harbour Bridge & Bondi Beach.</p></div>
-    </article>
-    <article class="hl-card">
-      <img src="https://images.unsplash.com/photo-1470071459604-3b5ec3a7fe05?q=80&w=800&auto=format&fit=crop" alt="Blue Mountains">
-      <div class="hl-content"><h3>Blue Mountains</h3><p>Scenic World, Three Sisters & waterfalls.</p></div>
-    </article>
-    <article class="hl-card">
-      <img src="https://images.unsplash.com/photo-1501785888041-af3ef285b470?q=80&w=800&auto=format&fit=crop" alt="Great Ocean Road">
-      <div class="hl-content"><h3>Great Ocean Road</h3><p>12 Apostles, coastal cliffs & surfing towns.</p></div>
-    </article>
-    <article class="hl-card">
-      <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=800&auto=format&fit=crop" alt="Melbourne">
-      <div class="hl-content"><h3>Melbourne</h3><p>City culture, laneways & Federation Square.</p></div>
-    </article>
-  </div>
-</section>
-
-<section class="container section">
-  <h2 class="section-title">Day-by-Day Itinerary</h2>
-  <div class="timeline">
-    <details class="day"><summary><div class="day-head"><span class="dot"></span><h3>Day 1 — Arrive Sydney</h3></div><div class="meta"><span><i class="ri-flight-takeoff-line"></i> Arrival</span><span><i class="ri-hotel-bed-line"></i> Sydney (2N)</span></div></summary><div class="day-body"><ul class="checks"><li><i class="ri-checkbox-circle-line"></i> Airport pickup & city orientation</li><li><i class="ri-checkbox-circle-line"></i> Evening walk at Darling Harbour</li></ul></div></details>
-
-    <details class="day"><summary><div class="day-head"><span class="dot"></span><h3>Day 2 — Sydney City Tour</h3></div><div class="meta"><span><i class="ri-road-map-line"></i> Sightseeing</span><span><i class="ri-hotel-bed-line"></i> Sydney (2N)</span></div></summary><div class="day-body"><ul class="checks"><li><i class="ri-checkbox-circle-line"></i> Visit Opera House & Harbour Bridge</li><li><i class="ri-checkbox-circle-line"></i> Relax at Bondi Beach</li></ul></div></details>
-
-    <details class="day"><summary><div class="day-head"><span class="dot"></span><h3>Day 3 — Blue Mountains</h3></div><div class="meta"><span><i class="ri-road-map-line"></i> Excursion</span><span><i class="ri-hotel-bed-line"></i> Sydney (1N)</span></div></summary><div class="day-body"><ul class="checks"><li><i class="ri-checkbox-circle-line"></i> Explore Three Sisters & Scenic World</li><li><i class="ri-checkbox-circle-line"></i> Visit Wentworth Falls</li></ul></div></details>
-
-    <details class="day"><summary><div class="day-head"><span class="dot"></span><h3>Day 4 — Great Ocean Road</h3></div><div class="meta"><span><i class="ri-road-map-line"></i> Travel to Melbourne</span><span><i class="ri-hotel-bed-line"></i> Melbourne (1N)</span></div></summary><div class="day-body"><ul class="checks"><li><i class="ri-checkbox-circle-line"></i> Drive along Great Ocean Road</li><li><i class="ri-checkbox-circle-line"></i> See 12 Apostles</li></ul></div></details>
-
-    <details class="day"><summary><div class="day-head"><span class="dot"></span><h3>Day 5 — Melbourne City</h3></div><div class="meta"><span><i class="ri-road-map-line"></i> Sightseeing</span><span><i class="ri-flight-takeoff-line"></i> Departure</span></div></summary><div class="day-body"><ul class="checks"><li><i class="ri-checkbox-circle-line"></i> Explore Federation Square & laneways</li><li><i class="ri-checkbox-circle-line"></i> Transfer to airport</li></ul></div></details>
-  </div>
-</section>
-
-<section class="container section">
-  <h2 class="section-title">Handpicked Hotels</h2>
-  <div class="hotel-slider" id="hotelSlider">
-    <article class="hotel"><img src="https://images.unsplash.com/photo-1566073771259-6a8506099945?q=80&w=1200&auto=format&fit=crop" alt="Sydney Hotel"><div class="hotel-body"><h3>Sydney Harbour Hotel</h3><div class="stars">★★★★☆</div><p>Close to Opera House & Darling Harbour.</p><div class="tags"><span><i class="ri-wifi-line"></i> Wi-Fi</span><span><i class="ri-restaurant-2-line"></i> Breakfast</span></div></div></article>
-    <article class="hotel"><img src="https://www.thehotelguru.com/_images/00/e3/00e3d0f6e4d7dd685074696828882121/600x422.jpg" alt="Blue Mountains Hotel"><div class="hotel-body"><h3>Blue Mountains Retreat</h3><div class="stars">★★★☆☆</div><p>Nature-inspired stay with valley views.</p><div class="tags"><span><i class="ri-fire-line"></i> Heater</span></div></div></article>
-    <article class="hotel"><img src="https://static.where-e.com/Australia/New_South_Wales/Blue_Mountains/Falls-Mountain-Retreat-Blue-Mountains_625f8374eaf07deb850764de9d759c03.jpg" alt="Melbourne Hotel"><div class="hotel-body"><h3>Melbourne City Hotel</h3><div class="stars">★★★★☆</div><p>Located in the heart of Melbourne CBD.</p><div class="tags"><span><i class="ri-wifi-line"></i> Wi-Fi</span><span><i class="ri-restaurant-2-line"></i> Breakfast</span></div></div></article>
-  </div>
-</section>
-
-<section class="container section grid-2">
-  <div><h2 class="section-title">Included</h2><ul class="tick-list"><li><i class="ri-check-line"></i> 4 nights accommodation</li><li><i class="ri-check-line"></i> Daily breakfast</li><li><i class="ri-check-line"></i> Private transfers</li></ul></div>
-  <div><h2 class="section-title">Excluded</h2><ul class="cross-list"><li><i class="ri-close-line"></i> International flights</li><li><i class="ri-close-line"></i> Travel insurance</li></ul></div>
-</section>
-
-<!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
-<script src="../script.js"></script>
+  <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
+  <script src="https://elfsightcdn.com/platform.js" async></script>
+  <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
+  <script src="../script.js"></script>
 
 
   <footer class="site-footer">
@@ -221,4 +360,5 @@
 
 
 </body>
+
 </html>
