--- a/Home Page/FAQ/index.html
+++ b/Home Page/FAQ/index.html
@@ -6,8 +6,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>FAQs — Phanthom Global</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Oswald:wght@200..700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="../New folder/Favicon (2).png" type="image/png">
+
 </head>
 
 <body>
@@ -35,8 +38,8 @@
     </div>
   </header>
 
-<link rel="stylesheet" href="../main.css">
-<script src="../main.js"></script>
+  <link rel="stylesheet" href="../main.css">
+  <script src="../main.js"></script>
 
   <div class="banner">
     <img src="./adventure.jpeg" alt="Phanthom Global Travel Banner">
@@ -185,19 +188,19 @@
             medical help, lost passports, or missed connections.</p>
         </div>
       </article>
-      
+
       <!-- Add rest of FAQs here (same as your original code) -->
 
     </section>
 
   </main>
 
-    <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
+  <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
+  <script src="https://elfsightcdn.com/platform.js" async></script>
+  <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
 
-    <footer class="site-footer">
+  <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
         <img src="../New folder/logo2.png" alt="Truly Sri Lanka">
