--- a/Home Page/PlanYourTrip/index.html
+++ b/Home Page/PlanYourTrip/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="../New folder/Favicon (2).png" type="image/png">
+
 </head>
 
 <body>
@@ -34,13 +37,14 @@
     </div>
   </header>
 
-<link rel="stylesheet" href="../main.css">
-<script src="../main.js"></script>
+  <link rel="stylesheet" href="../main.css">
+  <script src="../main.js"></script>
 
   <section class="hero">
     <div class="hero-inner">
       <h1>Plan Your Trip</h1>
-      <p>Tell us about your travel plans and schedule a short video meeting with our travel expert — pick a slot that suits you and we'll confirm.</p>
+      <p>Tell us about your travel plans and schedule a short video meeting with our travel expert — pick a slot that
+        suits you and we'll confirm.</p>
     </div>
   </section>
 
@@ -296,7 +300,8 @@
 
       <div style="margin-top:18px;display:flex;align-items:center;gap:10px">
         <input type="checkbox" id="terms" required>
-        <label for="terms" style="font-size:14px">I agree to the <a href="../Privacy Policy/index.html">Privacy Policy</a> / <a href="../Terms and condition/terms.html">Terms and conditions</a></label>
+        <label for="terms" style="font-size:14px">I agree to the <a href="../Privacy Policy/index.html">Privacy
+            Policy</a> / <a href="../Terms and condition/terms.html">Terms and conditions</a></label>
       </div>
 
       <div class="actions">
@@ -320,7 +325,7 @@
         <strong class="office-hours">Office Hours</strong>
         <div style="margin-top:10px">Mon - Fri: 09:00 - 18:00<br>Sat: 10:00 - 14:00
         </div>
-        </div>
+      </div>
       </div>
     </section>
 
@@ -344,12 +349,12 @@
       </div>
     </div>
   </div>
-   <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
+  <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
   <script src="https://elfsightcdn.com/platform.js" async></script>
   <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
 
-    <footer class="site-footer">
+  <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
         <img src="../New folder/logo2.png" alt="Truly Sri Lanka">
@@ -431,8 +436,9 @@
     </div>
 
   </footer>
- 
+
   <script src="script.js"></script>
 
 </body>
+
 </html>
