--- a/Home Page/AboutUsPage/trust us/index.html
+++ b/Home Page/AboutUsPage/trust us/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reasons To Trust Us - Phantom Global</title>
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="icon" href="../../New folder/Favicon (2).png" type="image/png">
   <style>
     body {
       margin: 0;
@@ -12,6 +14,30 @@
       background-color: #ffffff;
       color: #000000;
     }
+
+    header {
+      position: fixed !important;
+      top: 0;
+      left: 0;
+      width: 100%;
+      transition: transform 0.4s ease;
+      z-index: 9999;
+      background-color: none;
+      box-shadow: none;
+    }
+
+    header.hide-nav {
+      transform: translateY(-100%);
+    }
+
+    body {
+      padding-top: 100px;
+    }
+
+
+
+
+
 
     /* Banner */
     .banner {
@@ -27,7 +53,7 @@
     .banner h1 {
       color: #ffffff;
       font-size: 48px;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
+      text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.6);
     }
 
     /* Section */
@@ -38,7 +64,8 @@
     }
 
     .section h2 {
-      color: #00ffee; /* sky blue */
+      color: #00ffee;
+      /* sky blue */
       font-size: 36px;
       margin-bottom: 20px;
       text-align: center;
@@ -61,11 +88,12 @@
     }
 
     .card {
-      background-color: #f0f8ff; /* light sky-blue tint */
+      background-color: #f0f8ff;
+      /* light sky-blue tint */
       border-radius: 10px;
       overflow: hidden;
       width: 300px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s;
     }
 
@@ -110,51 +138,50 @@
     }
 
     /* Mobile Responsive */
-@media (max-width: 768px) {
-  .banner {
-    height: 200px;
-  }
+    @media (max-width: 768px) {
+      .banner {
+        height: 200px;
+      }
 
-  .banner h1 {
-    font-size: 32px;
-    text-align: center;
-    padding: 0 10px;
-  }
+      .banner h1 {
+        font-size: 32px;
+        text-align: center;
+        padding: 0 10px;
+      }
 
-  .section {
-    padding: 30px 15px;
-  }
+      .section {
+        padding: 30px 15px;
+      }
 
-  .section h2 {
-    font-size: 28px;
-  }
+      .section h2 {
+        font-size: 28px;
+      }
 
-  .section p {
-    font-size: 16px;
-    max-width: 100%;
-  }
+      .section p {
+        font-size: 16px;
+        max-width: 100%;
+      }
 
-  .card-container {
-    flex-direction: column;
-    align-items: center;
-  }
+      .card-container {
+        flex-direction: column;
+        align-items: center;
+      }
 
-  .card {
-    width: 90%;
-  }
+      .card {
+        width: 90%;
+      }
 
-  .card-content h3 {
-    font-size: 20px;
-  }
+      .card-content h3 {
+        font-size: 20px;
+      }
 
-  .card-content p {
-    font-size: 14px;
-  }
-}
-
-
+      .card-content p {
+        font-size: 14px;
+      }
+    }
   </style>
 </head>
+
 <body>
   <header>
     <a href="../../main.html" class="brand">
@@ -179,8 +206,8 @@
     </div>
   </header>
 
-<link rel="stylesheet" href="../../main.css">
-<script src="../../main.js"></script>
+  <link rel="stylesheet" href="../../main.css">
+  <script src="../../main.js"></script>
 
   <!-- Banner -->
   <div class="banner">
@@ -190,7 +217,9 @@
   <!-- Intro -->
   <div class="section">
     <h2>Why Choose Phantom Global?</h2>
-    <p>We understand that trust is the foundation of every journey. At Phantom Global, we pride ourselves on delivering transparent, reliable, and high-quality services. Here’s why thousands of travelers trust us with their adventures around the globe.</p>
+    <p>We understand that trust is the foundation of every journey. At Phantom Global, we pride ourselves on delivering
+      transparent, reliable, and high-quality services. Here’s why thousands of travelers trust us with their adventures
+      around the globe.</p>
   </div>
 
   <!-- Trust Reasons -->
@@ -199,7 +228,8 @@
     <div class="card-container">
 
       <div class="card">
-        <img src="https://www.berlin.de/binaries/asset/image_assets/6482649/ratio_2_1/1743496525/1000x500/" alt="Experience">
+        <img src="https://www.berlin.de/binaries/asset/image_assets/6482649/ratio_2_1/1743496525/1000x500/"
+          alt="Experience">
         <div class="card-content">
           <h3>Years of Experience</h3>
           <p>With years of expertise in global travel, we know how to plan safe, exciting, and smooth journeys.</p>
@@ -207,7 +237,8 @@
       </div>
 
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=800&q=80" alt="Transparency">
+        <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=800&q=80"
+          alt="Transparency">
         <div class="card-content">
           <h3>Transparency</h3>
           <p>No hidden costs or false promises — we ensure complete clarity in every booking and service.</p>
@@ -225,12 +256,12 @@
     </div>
   </div>
 
-    <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
+  <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
+  <script src="https://elfsightcdn.com/platform.js" async></script>
+  <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
 
-    <footer class="site-footer">
+  <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
         <img src="../../New folder/logo2.png" alt="Truly Sri Lanka">
@@ -313,6 +344,32 @@
 
   </footer>
 
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      let lastScroll = 0;
+      const header = document.querySelector('header');
+
+      window.addEventListener('scroll', function () {
+        const currentScroll = window.pageYOffset;
+
+        if (currentScroll <= 50) {
+          header.classList.remove('hide-nav');
+          lastScroll = currentScroll;
+          return;
+        }
+
+        if (currentScroll > lastScroll && currentScroll > 100) {
+          header.classList.add('hide-nav');
+        } else if (currentScroll < lastScroll) {
+          header.classList.remove('hide-nav');
+        }
+
+        lastScroll = currentScroll;
+      });
+    });
+  </script>
+
 
 </body>
+
 </html>
