--- a/Home Page/PrivacyPolicy/index.html
+++ b/Home Page/PrivacyPolicy/index.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Privacy Policy - Phanthom Global</title>
-  <meta name="description" content="Privacy Policy for Phantom Global — how we collect, use and protect your information." />
+  <meta name="description"
+    content="Privacy Policy for Phantom Global — how we collect, use and protect your information." />
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="../New folder/Favicon (2).png" type="image/png">
+
 
 </head>
+
 <body>
 
   <header>
@@ -33,39 +38,43 @@
     </div>
   </header>
 
-<link rel="stylesheet" href="../main.css">
-<script src="../main.js"></script>
- 
+  <link rel="stylesheet" href="../main.css">
+  <script src="../main.js"></script>
+
   <main class="container" role="main">
- <div class="banner">
-    <img src="./adventure.jpeg" alt="Phanthom Global Travel Banner">
-  </div>
+    <div class="banner">
+      <img src="./adventure.jpeg" alt="Phanthom Global Travel Banner">
+    </div>
 
     <h1>Privacy Policy</h1>
-      <p class="muted">Effective date: <time id="effectiveDate">[Insert Date]</time></p>
-      <div class="meta">
-        <span class="badge">Travel &amp; Booking</span>
-        <span class="badge">User-focused</span>
-        <span class="badge">GDPR-friendly</span>
-      </div>
-   
+    <p class="muted">Effective date: <time id="effectiveDate">[Insert Date]</time></p>
+    <div class="meta">
+      <span class="badge">Travel &amp; Booking</span>
+      <span class="badge">User-focused</span>
+      <span class="badge">GDPR-friendly</span>
+    </div>
 
-   <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
-<script src="https://elfsightcdn.com/platform.js" async></script>
-<div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
+
+    <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
+    <script src="https://elfsightcdn.com/platform.js" async></script>
+    <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
 
     <section class="section">
-      <p>Welcome to <strong>Phanthom Global</strong>. This Privacy Policy explains how we collect, use, disclose, and protect information when you visit or make bookings through our website.</p>
+      <p>Welcome to <strong>Phanthom Global</strong>. This Privacy Policy explains how we collect, use, disclose, and
+        protect information when you visit or make bookings through our website.</p>
     </section>
 
     <section class="section">
       <h2>Information We Collect</h2>
       <ul>
-        <li><strong>Personal information:</strong> name, email, phone number, billing and shipping addresses when you make a booking.</li>
+        <li><strong>Personal information:</strong> name, email, phone number, billing and shipping addresses when you
+          make a booking.</li>
         <li><strong>Travel details:</strong> itinerary, passenger names, passport/citizenship details.</li>
-        <li><strong>Payment data:</strong> card details are processed by our payment partners ( we don't store full card numbers on our servers).</li>
-        <li><strong>Technical &amp; usage data:</strong> IP address, device identifiers, browser type, pages visited and actions taken on the site.</li>
+        <li><strong>Payment data:</strong> card details are processed by our payment partners ( we don't store full card
+          numbers on our servers).</li>
+        <li><strong>Technical &amp; usage data:</strong> IP address, device identifiers, browser type, pages visited and
+          actions taken on the site.</li>
       </ul>
     </section>
 
@@ -81,13 +90,15 @@
 
     <section class="section">
       <h2>Cookies &amp; Tracking</h2>
-      <p>We and our partners use cookies and similar technologies to remember your preferences, analyze site traffic, and support advertising. You can manage cookie preferences with the controls below.</p>
+      <p>We and our partners use cookies and similar technologies to remember your preferences, analyze site traffic,
+        and support advertising. You can manage cookie preferences with the controls below.</p>
       <div class="controls">
         <button id="acceptCookies">Accept All Cookies</button>
         <button class="btn-ghost" id="manageCookies">Manage Cookies</button>
         <button class="btn-ghost" id="printBtn">Print Policy</button>
       </div>
-      <p id="cookieStatus" class="muted" style="margin-top:8px">Cookie status: <strong id="cookieVal">Unknown</strong></p>
+      <p id="cookieStatus" class="muted" style="margin-top:8px">Cookie status: <strong id="cookieVal">Unknown</strong>
+      </p>
     </section>
 
     <section class="section accordion" aria-label="Policy details">
@@ -113,7 +124,9 @@
           <span class="muted">Click to expand</span>
         </div>
         <div class="acc-body" id="dataSecurity">
-          <p>We implement reasonable technical and organizational measures to protect your data, including encryption, access controls, and regular security testing. However, no internet transmission is 100% secure; if you suspect a breach, contact us right away.</p>
+          <p>We implement reasonable technical and organizational measures to protect your data, including encryption,
+            access controls, and regular security testing. However, no internet transmission is 100% secure; if you
+            suspect a breach, contact us right away.</p>
         </div>
       </div>
 
@@ -123,7 +136,8 @@
           <span class="muted">Click to expand</span>
         </div>
         <div class="acc-body" id="retention">
-          <p>We retain data as long as necessary to provide services, comply with legal obligations, resolve disputes, and enforce agreements. Retention periods vary by data type and jurisdiction.</p>
+          <p>We retain data as long as necessary to provide services, comply with legal obligations, resolve disputes,
+            and enforce agreements. Retention periods vary by data type and jurisdiction.</p>
         </div>
       </div>
 
@@ -133,11 +147,13 @@
           <span class="muted">Click to expand</span>
         </div>
         <div class="acc-body" id="rights">
-          <p>Depending on your country, you may have the right to access, correct, delete, or port your personal data, and to object to certain processing (including marketing). To exercise your rights, contact us at the address below.</p>
+          <p>Depending on your country, you may have the right to access, correct, delete, or port your personal data,
+            and to object to certain processing (including marketing). To exercise your rights, contact us at the
+            address below.</p>
         </div>
       </div>
 
-     
+
 
       <div class="acc-item">
         <div class="acc-head" tabindex="0" data-target="contact">
@@ -145,7 +161,8 @@
           <span class="muted">Click to expand</span>
         </div>
         <div class="acc-body" id="contact">
-          <p>If you have questions or want to exercise your privacy rights, email us at <a href="mailto:cartlanka097@gmail.com">cartlanka097@gmail.com</a> or write to:</p>
+          <p>If you have questions or want to exercise your privacy rights, email us at <a
+              href="mailto:cartlanka097@gmail.com">cartlanka097@gmail.com</a> or write to:</p>
           <p class="muted">Your Company Name<br>Address <br>Phone Number <br>Country </p>
         </div>
       </div>
@@ -154,7 +171,7 @@
     <p class="muted" style="margin-top:14px; font-size:13px">Last updated: <span id="lastUpdated">2025/09/10</span></p>
   </main>
 
-  
+
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
@@ -241,4 +258,5 @@
 
   <script src="scripts.js"></script>
 </body>
+
 </html>
