--- a/Home Page/main.html
+++ b/Home Page/main.html
@@ -7,7 +7,9 @@
   <title>Phanthom Global - No.1 Travel Website </title>
   <link rel="stylesheet" href="main.css" />
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link rel="icon" href="./New folder/Favicon (2).png" type="image/png">
 
 </head>
 
@@ -183,31 +185,31 @@
 
       <div class="pin australia">
         <a href="./Countries/Amadaaustrailia.html">
-        <button>Australia</button>
+          <button>Australia</button>
         </a>
       </div>
 
       <div class="pin newzealand">
         <a href="./Countries/AmadaNewZealand.html">
-        <button>Newzealand</button>
+          <button>Newzealand</button>
         </a>
       </div>
 
       <div class="pin Canada">
         <a href="./Countries/AmadaCanada.html">
-        <button>Canada</button>
+          <button>Canada</button>
         </a>
       </div>
 
       <div class="pin uk">
         <a href="./Countries/Amada'sUK.html">
-        <button>United Kingdom</button>
+          <button>United Kingdom</button>
         </a>
       </div>
 
       <div class="pin Switzerland">
         <a href="./Countries/Amadaswitzerland.html">
-        <button>Switzerland</button>
+          <button>Switzerland</button>
         </a>
       </div>
     </div>
